# bouyomi_engine

./: .gitignore  engine_manifest.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run.py  run.spec
.github/actions/download-cli/: action.yml
.github/workflows/: build-engine.yml
resources/character_info/: filemap.json
voicevox_engine/core/: core_initializer.py  core_wrapper.py
voicevox_engine/dev/core/: mock.py
voicevox_engine/dev/tts_engine/: mock.py
voicevox_engine/tts_pipeline/: njd_feature_processor.py
voicevox_engine/user_dict/: user_dict_manager.py
voicevox_engine/user_dict/dictionary/: download.py
voicevox_engine/utility/: path_utility.py
