[project]
name = "voicevox_engine"
version = "0.24.0" # TODO: できればversionを自動管理する
requires-python = "==3.11.9"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "aquestalk-python>=1.1",
  "cffi==1.17.1",
  "click==8.1.8",
  "colorama==0.4.6 ; sys_platform == 'win32'",
  "fastapi-slim==0.115.12",
  "h11==0.14.0",
  "idna==3.10",
  "jinja2==3.1.6", # NOTE: required by fastapi.templating.Jinja2Templates (fastapi-slim's unmanaged dependency)
  "kabosu-core",
  "kanalizer==0.1.1",
  "markupsafe==3.0.2",
  "numpy==1.26.4",
  "platformdirs==4.3.7",
  "pycparser==2.22",
  "pydantic==2.11.3",
  "pydantic-core==2.33.1",
  "python-multipart==0.0.20", # NOTE: required by fastapi.Form (fastapi-slim's unmanaged dependency)
  "pyworld==0.3.5",
  "pyyaml==6.0.2",
  "semver==3.0.4",
  "setuptools==78.1.0", # NOTE: pyworldがpkg_resourcesを使っている。
  "sniffio==1.3.1",
  "soundfile==0.13.1",
  "soxr==0.5.0.post1",
  "starlette==0.45.3",
  "tqdm==4.67.1",
  "typing-extensions==4.13.2",
  "typing-inspection==0.4.0",
  "uvicorn==0.34.0",
]

[tool.uv]
default-groups = []

[tool.uv.sources]
kabosu-core = { git = "https://github.com/q9uri/kabosu-core", rev = "bf95fc6f227cabbb0e38220f32dc9da7fffdd38c" }

[dependency-groups]
build = ["pyinstaller>=6"]
dev = [
  "coveralls>=4.0.1",
  "httpx>=0.28.1", # NOTE: required by fastapi.testclient.TestClient (fastapi-slim's unmanaged dependency)
  "mypy>=1.10.0",
  "pip-audit>=2.7.3",
  "pip-licenses==5.0.0", # NOTE: must be specified exactly (ref: https://github.com/VOICEVOX/voicevox_engine/issues/1281)
  "pre-commit>=4.0.1",
  "pytest>=8.2.0",
  "ruff>=0.11.1",
  "syrupy>=4.6.1",
  "types-pyyaml>=6.0.12",
  "typos>=1.31.1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "D", "D213", "PT", "NPY"]
ignore = [
  "E501", # line-too-long
  "D400", # missing-trailing-period。日本語の「。」に対応していないため。
  "D403", # first-word-uncapitalized。日本語とは無関係であるため。日英混合時の挙動に一貫性が無いため。
]
unfixable = [
  "F401", # unused-import
  "F841", # unused-variable
]

[tool.ruff.lint.per-file-ignores]
"test/**/test_*.py" = ["D103"] # undocumented-public-function。pytest の対象 test_*() が D103 の対象になり、関数名から内容が自明でも docstring を強制されるため。

[tool.ruff.lint.isort]
known-first-party = ["voicevox_engine"]
known-third-party = ["numpy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"
python_version = "3.11"
ignore_missing_imports = true
warn_unreachable = true

[tool.typos.default.extend-words]
datas = "datas" # PyInstaller's argument
